--- a/app/src/main/res/drawable/navbar_shape.xml
+++ b/app/src/main/res/drawable/navbar_shape.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/light_grey"/>
-    <stroke
-        android:width="2dp"
-    android:color="@color/blue" />
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Bottom layer: solid color fill -->
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/light_grey" />
+            <corners android:radius="1dp" />
+        </shape>
+    </item>
 
-    <corners android:radius="4dp"/>
-
-    <padding
-        android:left="10dp"
-        android:top="10dp"
-        android:right="10dp"
-        android:bottom="10dp"/>
-</shape>
+    <!-- Top layer: bottom stroke -->
+    <item android:bottom="-2dp" android:right="-2dp" android:left="-2dp">
+        <shape android:shape="rectangle">
+            <stroke android:width="1dp" android:color="@color/blue" />
+            <!-- Transparent fill to make only the stroke visible -->
+            <solid android:color="@android:color/transparent" />
+            <!-- No need to define corners here unless you want a specific effect -->
+        </shape>
+    </item>
+</layer-list>
