--- a/app/src/main/res/layout/receipt.xml
+++ b/app/src/main/res/layout/receipt.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="20dp"
+    android:background="@drawable/background_blur">
 
     <TextView
         android:id="@+id/receiptTitle"
@@ -33,6 +34,17 @@
         app:layout_constraintTop_toBottomOf="@+id/qrCode"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:id="@+id/confirmButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Confirm"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/bookingDetails"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <!-- Additional details, if any -->
 
