--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,9 @@
     <color name="dark_grey">#424242</color> <!-- Darker grey for background -->
     <color name="dark_red">#B71C1C</color> <!-- Darker red for errors -->
     <color name="dark">#121212</color> <!-- Very dark (almost black) for surfaces -->
+
+    <color name="colorUpcoming">#FFEB3B</color> <!-- Yellow -->
+    <color name="colorInProgress">#4CAF50</color> <!-- Green -->
+    <color name="colorCompleted">#4CAF50</color> <!-- Green -->
+    <color name="colorCancellation">#F44336</color> <!-- Red -->
 </resources>
