--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -49,6 +49,7 @@
                 android:textColor="@color/black"
                 android:textSize="22sp"
                 android:textStyle="bold"
+                android:text=""
                 app:layout_constraintTop_toBottomOf="@id/profileImage"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
