--- a/app/src/main/res/layout/fragment_add_card_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_add_card_bottom_sheet.xml
@@ -7,14 +7,17 @@
     android:padding="16dp"
     android:background="@drawable/round_corners">
 
-    <!-- ImageView for Remove Icon -->
     <ImageView
         android:id="@+id/remove"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@drawable/close"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/remove"
+        app:tint="@color/quantum_grey"
+        android:scaleType="centerCrop"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/titleTextView"
         android:contentDescription="@string/remove_card" />
 
     <!-- Title Text -->
@@ -22,14 +25,12 @@
         android:id="@+id/titleTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:text="@string/add_new_card"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/remove"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Stripe Card Input Widget -->
@@ -49,8 +50,6 @@
         android:layout_height="wrap_content"
         android:text="@string/add_card"
         android:layout_marginTop="24dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         app:layout_constraintTop_toBottomOf="@id/cardInputWidget"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
