--- a/app/src/main/res/layout/parkingspot_bottom_sheet.xml
+++ b/app/src/main/res/layout/parkingspot_bottom_sheet.xml
@@ -8,49 +8,46 @@
 
     <ImageView
         android:id="@+id/remove"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="4dp"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
         android:contentDescription="@string/close"
         android:src="@drawable/remove"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:tint="@color/quantum_grey"
+        android:scaleType="centerCrop"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/bottom_sheet_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:text="Parking Spot Title"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/remove"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
 
     <TextView
         android:id="@+id/DescriptionHeading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Description"
-        android:textSize="15sp"
+        android:textSize="18sp"
         android:textStyle="bold"
+        android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@id/bottom_sheet_title"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="20dp"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/bottom_sheet_details"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Detailed description here"
-        android:layout_marginTop="4dp"
-        android:textSize="14sp"
-        android:textColor="@color/black"
+        android:layout_marginTop="8dp"
+        android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/DescriptionHeading"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -60,11 +57,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Space Features"
-        android:textSize="15sp"
+        android:textSize="18sp"
         android:textStyle="bold"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/bottom_sheet_details"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="10dp"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/iconCCTV"
@@ -113,33 +110,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Size Type"
-        android:textSize="15sp"
+        android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/SpaceFeaturesHeading"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="40dp"/>
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@id/iconElectricCharger"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/SizeType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Small/Medium/Large"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
+        android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/SizeTypeHeading"
         app:layout_constraintStart_toStartOf="parent" />
 
-
     <TextView
         android:id="@+id/Price"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="£0/hour"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/SizeType"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/bottom_sheet_book_now" />
 
     <Button
         android:id="@+id/bottom_sheet_book_now"
