--- a/app/src/main/res/drawable/card_background.xml
+++ b/app/src/main/res/drawable/card_background.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="8dp" />
-    <solid android:color="@color/white" />
+    <corners android:radius="12dp" />
+    <solid android:color="?attr/colorSurface" />
     <stroke
-        android:width="1dp"
-        android:color="@color/light_grey" />
-    <padding
-        android:left="10dp"
-        android:top="10dp"
-        android:right="10dp"
-        android:bottom="10dp" />
+        android:width="2dp"
+        android:color="@color/Lighter_blue" />
 </shape>
