--- a/app/src/main/res/drawable/navbar_shape.xml
+++ b/app/src/main/res/drawable/navbar_shape.xml
@@ -3,7 +3,7 @@
     <!-- Bottom layer: solid color fill -->
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/light_grey" />
+            <solid android:color="?attr/colorSurface" />
             <corners android:radius="1dp" />
         </shape>
     </item>
