--- a/app/src/main/res/drawable/round_btn_2.xml
+++ b/app/src/main/res/drawable/round_btn_2.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/off_white"/>
+    <solid android:color="?attr/colorSurface"/>
     <stroke android:width="2dp"
         android:color="@color/Lighter_blue"/>
     <corners android:radius="20dp"/>
