--- a/app/src/main/res/layout/activity_booking_process.xml
+++ b/app/src/main/res/layout/activity_booking_process.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="47dp"
-        android:background="@color/blue"
+        android:background="?attr/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -28,6 +28,7 @@
         android:text="Parking Space Name"
         android:textStyle="bold"
         android:textSize="20sp"
+        android:textColor="?attr/colorOnSurface"
         android:gravity="center"
         style="@style/TextAppearance.Material3.HeadlineMedium"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
@@ -46,6 +47,9 @@
         android:paddingEnd="20dp"
         app:endIconDrawable="@drawable/calendar"
         app:endIconMode="custom"
+        app:endIconTint="?attr/colorOnSurface"
+        app:hintTextColor="?attr/colorOnSurface"
+        app:boxBackgroundColor="?attr/colorSurface"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/parkingSpaceName"
@@ -57,7 +61,8 @@
             android:layout_height="wrap_content"
             android:focusable="false"
             android:inputType="none"
-            android:onClick="showDatePickerDialog" />
+            android:onClick="showDatePickerDialog"
+            android:textColor="?attr/colorOnSurface"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <!-- Start Time Selector -->
@@ -68,6 +73,8 @@
         android:layout_height="wrap_content"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
+        app:hintTextColor="?attr/colorOnSurface"
+        app:boxBackgroundColor="?attr/colorSurface"
         app:layout_constraintTop_toBottomOf="@id/viewDate"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/viewEndTime"
@@ -79,7 +86,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:focusable="false"
-            android:onClick="showStartTimePickerDialog"/>
+            android:onClick="showStartTimePickerDialog"
+            android:textColor="?attr/colorOnSurface"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -89,6 +97,8 @@
         android:layout_height="wrap_content"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
+        app:hintTextColor="?attr/colorOnSurface"
+        app:boxBackgroundColor="?attr/colorSurface"
         app:layout_constraintTop_toBottomOf="@id/viewDate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/viewStartTime"
@@ -100,7 +110,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:focusable="false"
-            android:onClick="showEndTimePickerDialog"/>
+            android:onClick="showEndTimePickerDialog"
+            android:textColor="?attr/colorOnSurface"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -110,6 +121,8 @@
         android:layout_height="wrap_content"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
+        app:hintTextColor="?attr/colorOnSurface"
+        app:boxBackgroundColor="?attr/colorSurface"
         app:layout_constraintTop_toBottomOf="@id/viewEndTime"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -119,7 +132,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/duration"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:textColor="?attr/colorOnSurface"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
@@ -128,6 +142,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Vehicle Info"
+        android:textColor="?attr/colorOnSurface"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         app:layout_constraintTop_toBottomOf="@id/viewDuration"
@@ -139,7 +154,9 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="Add Vehicle Details"
+        android:textColor="?attr/colorOnSurface"
         android:padding="16dp"
+
         android:clickable="true"
         android:focusable="true"
         android:background="?attr/selectableItemBackground"
@@ -155,6 +172,7 @@
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:text="Payment Method"
+        android:textColor="?attr/colorOnSurface"
         app:layout_constraintTop_toBottomOf="@id/vehicleDetails"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="16dp"/>
@@ -166,6 +184,7 @@
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:text="No payment method added"
+        android:textColor="?attr/colorOnSurface"
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@id/paymentMethodLabel"
         app:layout_constraintStart_toStartOf="parent"
@@ -273,8 +292,8 @@
         android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:text="Book Now"
-        android:textColor="@color/off_white"
-        android:backgroundTint="@color/blue"
+        android:textColor="?attr/colorOnPrimary"
+        android:backgroundTint="?attr/colorPrimary"
         app:layout_constraintTop_toBottomOf="@+id/errorTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
