--- a/app/src/main/res/layout/activity_receipt.xml
+++ b/app/src/main/res/layout/activity_receipt.xml
@@ -4,39 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:background="?attr/colorSurface">
 
-    <ImageView
-        android:id="@+id/backButton"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@drawable/arrow_back"
-        android:contentDescription="@string/back_button"
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="47dp"
+        android:background="?attr/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <!-- Title TextView -->
-    <TextView
-        android:id="@+id/titleTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Receipt"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/backButton"
-        app:layout_constraintStart_toEndOf="@id/backButton"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:navigationIcon="@drawable/arrow_back"
+        app:navigationIconTint="@color/off_white"
+        app:title="Receipt"
+        app:titleCentered="true"
+        app:titleTextAppearance="@style/TextAppearance.AppCompat.Body2"
+        app:titleTextColor="@color/white"
+        app:elevation="4dp" />
 
     <!-- The rest of your layout components go here -->
     <ImageView
         android:id="@+id/qrCodeImageView"
         android:layout_width="296dp"
         android:layout_height="252dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="35dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/backButton" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <TextView
         android:id="@+id/parkingSpotNameTextView"
@@ -57,6 +51,8 @@
         android:layout_height="wrap_content"
         android:text="Date:"
         android:textSize="18sp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/dateTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/dateTextView" />
@@ -67,6 +63,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textSize="18sp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:gravity="end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/labelDate"
@@ -78,6 +76,8 @@
         android:layout_height="wrap_content"
         android:text="Start Time:"
         android:textSize="18sp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/startTimeTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/startTimeTextView" />
@@ -88,6 +88,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textSize="18sp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:gravity="end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/labelStartTime"
@@ -98,6 +100,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="End Time:"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/endTimeTextView"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,6 +113,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textSize="18sp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:gravity="end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/labelEndTime"
@@ -119,6 +125,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Duration:"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/durationTextView"
         app:layout_constraintStart_toStartOf="parent"
@@ -130,6 +138,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:textSize="18sp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:gravity="end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/labelDuration"
@@ -142,6 +152,8 @@
         android:layout_height="wrap_content"
         android:text="Status:"
         android:textSize="18sp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/statusTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/statusTextView" />
@@ -152,6 +164,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:textSize="18sp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:gravity="end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/labelStatus"
@@ -164,6 +178,8 @@
         android:text="Total:"
         android:textSize="25sp"
         android:textStyle="bold"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/totalTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/totalTextView" />
@@ -176,15 +192,18 @@
         android:layout_marginTop="20dp"
         android:textSize="25sp"
         android:gravity="end"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/labelTotal"
         app:layout_constraintTop_toBottomOf="@id/statusTextView" />
 
     <Button
         android:id="@+id/cancelBookingButton"
-        android:layout_width="0dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:text="Cancel Booking"
+        android:backgroundTint="?attr/colorError"
         android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@+id/totalTextView"
         app:layout_constraintStart_toStartOf="parent"
