--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_grey">
+    android:background="?attr/colorSurface">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="47dp"
-        android:background="@color/blue"
+        android:background="?attr/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="More Settings"
+        app:title="Settings"
         app:titleCentered="true"
         app:titleTextAppearance="@style/TextAppearance.AppCompat.Body2"
-        app:titleTextColor="@color/off_white"
-        app:elevation="10dp"/>
+        app:titleTextColor="@color/white"
+        app:elevation="4dp" />
 
     <ScrollView
         android:layout_width="0dp"
@@ -30,23 +30,25 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:padding="16dp">
 
             <ImageView
                 android:id="@+id/profileImage"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_marginTop="10dp"
                 android:src="@drawable/profile"
+                app:tint="?attr/colorOnSurface"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="16dp" />
 
             <TextView
                 android:id="@+id/userName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
+                android:textColor="?attr/colorOnSurface"
                 android:textSize="22sp"
                 android:textStyle="bold"
                 android:text=""
@@ -57,12 +59,14 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/viewProfile"
                 android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_height="48dp"
                 android:text="View Profile"
                 android:textAllCaps="false"
                 app:layout_constraintTop_toBottomOf="@id/userName"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:cornerRadius="24dp"
+                android:layout_marginTop="16dp"/>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/settingsContainer"
@@ -82,6 +86,7 @@
                     android:layout_height="50dp"
                     android:padding="10dp"
                     android:src="@drawable/dark_mode"
+                    app:tint="?attr/colorOnSurface"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -90,7 +95,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Dark Mode"
-                    android:textColor="@color/black"
+                    android:textColor="?attr/colorOnSurface"
                     android:textSize="18sp"
                     app:layout_constraintStart_toEndOf="@id/darkModeIcon"
                     app:layout_constraintTop_toTopOf="@id/darkModeIcon"
@@ -111,6 +116,7 @@
                     android:layout_height="50dp"
                     android:padding="10dp"
                     android:src="@drawable/ic_notifications"
+                    app:tint="?attr/colorOnSurface"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/darkModeIcon"
                     app:layout_constraintBottom_toBottomOf="parent" />
@@ -120,7 +126,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Notifications"
-                    android:textColor="@color/black"
+                    android:textColor="?attr/colorOnSurface"
                     android:textSize="18sp"
                     app:layout_constraintStart_toEndOf="@id/notificationIcon"
                     app:layout_constraintTop_toTopOf="@id/notificationIcon"
@@ -154,6 +160,7 @@
                     android:layout_height="50dp"
                     android:padding="10dp"
                     android:src="@drawable/car"
+                    app:tint="?attr/colorOnSurface"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent" />
@@ -163,7 +170,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Vehicle Information"
-                    android:textColor="@color/black"
+                    android:textColor="?attr/colorOnSurface"
                     android:textSize="18sp"
                     app:layout_constraintStart_toEndOf="@id/vehicleInfo"
                     app:layout_constraintTop_toTopOf="@id/vehicleInfo"
@@ -177,6 +184,7 @@
                     android:layout_height="50dp"
                     android:padding="10dp"
                     android:src="@drawable/credit_card"
+                    app:tint="?attr/colorOnSurface"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/vehicleInfo"
                     app:layout_constraintBottom_toBottomOf="parent" />
@@ -186,7 +194,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Payment Method"
-                    android:textColor="@color/black"
+                    android:textColor="?attr/colorOnSurface"
                     android:textSize="18sp"
                     app:layout_constraintStart_toEndOf="@id/paymentInfo"
                     app:layout_constraintTop_toTopOf="@id/paymentInfo"
@@ -198,6 +206,7 @@
                     android:layout_height="50dp"
                     android:padding="10dp"
                     android:src="@drawable/shield"
+                    app:tint="?attr/colorOnSurface"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -206,7 +215,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Security &amp; Privacy"
-                    android:textColor="@color/black"
+                    android:textColor="?attr/colorOnSurface"
                     android:textSize="18sp"
                     app:layout_constraintStart_toEndOf="@id/security"
                     app:layout_constraintTop_toTopOf="@id/security"
@@ -233,6 +242,7 @@
                     android:layout_height="50dp"
                     android:padding="10dp"
                     android:src="@drawable/call"
+                    app:tint="?attr/colorOnSurface"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -240,8 +250,8 @@
                     android:id="@+id/contactText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Dark Mode"
-                    android:textColor="@color/black"
+                    android:text="Contact Us"
+                    android:textColor="?attr/colorOnSurface"
                     android:textSize="18sp"
                     app:layout_constraintStart_toEndOf="@id/contactIcon"
                     app:layout_constraintTop_toTopOf="@id/contactIcon"
@@ -253,6 +263,7 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:padding="10dp"
+                    app:tint="?attr/colorOnSurface"
                     android:src="@drawable/logout"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/contactIcon"
@@ -263,7 +274,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Logout"
-                    android:textColor="@color/black"
+                    android:textColor="?attr/colorOnSurface"
                     android:textSize="18sp"
                     app:layout_constraintStart_toEndOf="@id/logout"
                     app:layout_constraintTop_toTopOf="@id/logout"
