--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="?attr/colorSurface">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="47dp"
-        android:background="@color/blue"
+        android:background="?attr/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -28,6 +29,7 @@
         android:text="Cards"
         android:textStyle="bold"
         android:textSize="20sp"
+        android:textColor="?attr/colorOnSurface"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,40 +60,26 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/addCard"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/addCardButton"
         android:layout_width="300dp"
-        android:layout_height="45dp"
-        android:layout_marginBottom="16dp"
+        android:layout_height="40dp"
+        app:icon="@drawable/add_circle"
+        app:iconTint="@color/off_white"
+        android:text="Add a Card"
+        android:textColor="@color/off_white"
+        android:textStyle="bold"
         android:background="@drawable/straight_btn"
+        app:iconPadding="8dp"
+        app:iconGravity="textStart"
+        app:iconSize="24dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"/>
 
-        <ImageView
-            android:id="@+id/iconAddCard"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_marginStart="16dp"
-            android:src="@drawable/add"
-            app:tint="@color/off_white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/textAddCard"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="Add a Card"
-            android:textColor="@color/off_white"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/iconAddCard"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
