--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/card_background"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:layout_marginBottom="16dp">
 
     <TextView
         android:id="@+id/parkingSpotId"
@@ -12,6 +13,7 @@
         android:layout_height="wrap_content"
         android:text="Parking Spot ID"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="?attr/colorOnSurface"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/totalPrice"
@@ -23,6 +25,7 @@
         android:layout_height="wrap_content"
         android:text="Price"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="?attr/colorOnSurface"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/parkingSpotId"
@@ -34,10 +37,11 @@
         android:layout_height="wrap_content"
         android:text="Date"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="?attr/colorOnSurface"
         app:layout_constraintTop_toBottomOf="@id/parkingSpotId"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="1dp"/>
 
     <TextView
         android:id="@+id/status"
@@ -48,7 +52,6 @@
         app:layout_constraintTop_toBottomOf="@id/date"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp"/>
-
+        android:layout_marginTop="1dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
