--- a/app/src/main/res/layout/parkingspot_bottom_sheet.xml
+++ b/app/src/main/res/layout/parkingspot_bottom_sheet.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/close"
         android:src="@drawable/remove"
-        app:tint="@color/quantum_grey"
+        app:tint="?attr/colorOnSurface"
         android:scaleType="centerCrop"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +26,7 @@
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_marginTop="16dp"
+        android:textColor="?attr/colorOnSurface"
         app:layout_constraintTop_toBottomOf="@id/remove"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -38,6 +39,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         android:layout_marginTop="24dp"
+        android:textColor="?attr/colorOnSurface"
         app:layout_constraintTop_toBottomOf="@id/bottom_sheet_title"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -48,6 +50,7 @@
         android:text="Detailed description here"
         android:layout_marginTop="8dp"
         android:textSize="16sp"
+        android:textColor="?attr/colorOnSurface"
         app:layout_constraintTop_toBottomOf="@id/DescriptionHeading"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -60,6 +63,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
+        android:textColor="?attr/colorOnSurface"
         app:layout_constraintTop_toBottomOf="@id/bottom_sheet_details"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -74,7 +78,7 @@
         app:layout_constraintEnd_toStartOf="@+id/iconDisabledAccess"
         android:layout_marginEnd="10dp"
         android:background="@drawable/icon_background"
-        app:tint="@color/blue"
+        app:tint="?attr/colorPrimary"
         android:layout_marginTop="10dp"/>
 
     <ImageView
@@ -88,7 +92,7 @@
         app:layout_constraintEnd_toStartOf="@+id/iconElectricCharger"
         android:layout_marginEnd="10dp"
         android:background="@drawable/icon_background"
-        app:tint="@color/blue"
+        app:tint="?attr/colorPrimary"
         android:layout_marginTop="10dp"/>
 
 
@@ -102,7 +106,7 @@
         app:layout_constraintStart_toEndOf="@id/iconDisabledAccess"
         app:layout_constraintTop_toBottomOf="@id/SpaceFeaturesHeading"
         android:background="@drawable/icon_background"
-        app:tint="@color/blue"
+        app:tint="?attr/colorPrimary"
         android:layout_marginTop="10dp"/>
 
     <TextView
@@ -113,6 +117,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         android:layout_marginTop="32dp"
+        android:textColor="?attr/colorOnSurface"
         app:layout_constraintTop_toBottomOf="@id/iconElectricCharger"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -123,8 +128,19 @@
         android:text="Small/Medium/Large"
         android:layout_marginTop="8dp"
         android:textSize="16sp"
+        android:textColor="?attr/colorOnSurface"
         app:layout_constraintTop_toBottomOf="@id/SizeTypeHeading"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="?attr/colorOnSurface"
+        app:layout_constraintTop_toBottomOf="@id/SizeType"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
 
     <TextView
         android:id="@+id/Price"
@@ -133,8 +149,9 @@
         android:text="£0/hour"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/SizeType"
+        android:layout_marginTop="8dp"
+        android:textColor="?attr/colorOnSurface"
+        app:layout_constraintTop_toBottomOf="@id/divider"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/bottom_sheet_book_now" />
 
@@ -145,9 +162,9 @@
         android:text="Reserve Now"
         android:background="@drawable/straight_btn"
         android:textColor="@color/white"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/SizeType"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/divider"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp"/>
 
 
 
