--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/nav_search"
+        android:id="@+id/nav_wallet"
         android:icon="@drawable/ic_search"
-        android:title="@string/search"/>
+        android:title="@string/wallet"/>
     <item
         android:id="@+id/nav_booking"
         android:icon="@drawable/ic_book"
